bynkc/tests/fixtures/negative/62_effect_in_pure_fn/input.bynk
commons demo

fn pureFn(n: Int) -> Int {
  let x <- Effect.pure(n)
  x
}
